--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ font-family: 'Josefin Slab', serif;
 font-size:30px;
 }
 .parallax-container{
-min-height:670px;
+min-height:100vh;
+height:100%;
 }
 #section-white{
 margin-top:10px;
@@ -159,7 +160,7 @@ I expect to graduate with a Bachelors degree in May 2017. I love to play with we
 <p>Want to CONECT?</p>
 <div id="linkimg">
 <a href="https://www.facebook.com/abhi.saxenarocks" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Connect me on FB"><img src="fb.png"></a>
-<a href="https://www.github.com/abhi-123" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Follow me on github"><img src="git.png" width="128px" height="128px"></a>
+<a href="https://www.github.com/abhi-123" class="tooltipped" data-position="right" data-delay="50" data-tooltip="Follow me on github"><img src="Git.png" width="128px" height="128px"></a>
 <a href="https://www.quora.com/profile/Abhishek-Saxena-77"class="tooltipped" data-position="right" data-delay="50" data-tooltip="Ask me on qoura"><img src="quora.png"></a>
 </div>
 </div>
