--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ I expect to graduate with a Bachelors degree in May 2017. I love to play with we
   <h5>2-Client-Base CHATBOT</h5>
   <p id="techinfo">It is a Chatbot like application which reply's on certain inputs.</p>
   <span id="tech">Technologies used:- &nbsp;</span><span id="techused">HTML &nbsp;&nbsp;CSS3&nbsp; & &nbsp; Jquery</span>
-  <a href="www.abhi-123.github.io/projects/Chatbot/" target="blank" class="btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="Click to view Demo">Demo</a></br>
+  <a href="https://www.abhi-123.github.io/projects/Chatbot/" target="blank" class="btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="Click to view Demo">Demo</a></br>
   </div>
   </div>
 <div class="contact">
