--- a/index.html
+++ b/index.html
@@ -45,31 +45,30 @@ h4{
 font-family:'Josefin Slab', serif;
 font-size:40px;
 }
-h3:hover{
-text-decoration:underline;
-}
 a:hover{
 border-bottom:1px solid green;
 }
 h5{
 margin-left:30px;
-color:orange;
+color:#ff6f00;
 font-family: 'Josefin Slab', serif;
 font-size:30px;
 }
 #tech{
-color:lightgreen;
+color:#004d40;
 font-family: 'Josefin Slab', serif;
 font-size:25px;
+margin-left:65px;
 }
 #techused{
-color:teal;
+color:#0091ea;
 font-family: 'Josefin Slab', serif;
 font-size:20px;
 }
+
 #techinfo{
-margin-left:10px;
-color:white;
+margin-left:55px;
+color:#ef5350;
 font-family: 'Josefin Slab', serif;
 font-size:25px;
 }
@@ -100,6 +99,9 @@ min-height:300px;
 color:white;
 font-family: 'Josefin Slab', serif;
 font-size:25px;
+}
+#img1{
+-webkit-filter:blur(15px);
 }
 </style>
 </head>
@@ -146,7 +148,7 @@ I expect to graduate with a Bachelors degree in May 2017. I love to play with we
   <div id="projecttext">
 <h3 class="center">Projects</h3><br>
   <h5>1-Employee Management Portal</h5>
-  <p id="techinfo">It is a project where a admin can add a employee into company's Database and can edit delete the database. </p>
+  <p id="techinfo">It is a project where a admin can add a employee into company's Database and can edit & delete the database. </p>
   <span id="tech">Technologies used:- &nbsp;</span><span id="techused">HTML&nbsp;&nbsp;CSS3&nbsp;&nbsp;PHP&nbsp;&nbsp;MysQl&nbsp;&nbsp;Jquery & &nbsp; AJAX</span>
   <a href="https://www.github.com/abhi-123/Emp" target="blank" class="btn tooltipped" data-position="bottom" data-delay="50" data-tooltip="Click to view Code">Code</a><br><br>
   <h5>2-Client-Base CHATBOT</h5>
