--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ font-family: 'Josefin Slab', serif;
 font-size:30px;
 }
 #tech{
-color:#004d40;
+color:#4a148c;
 font-family: 'Josefin Slab', serif;
 font-size:25px;
 margin-left:65px;
