--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@ font-size:25px;
 #img1{
 -webkit-filter:blur(15px);
 }
+#img{
+-webkit-filter:blur(5px);
+}
 #typewriter{
 margin-left:300px;
 margin-right:300px;
@@ -122,7 +125,7 @@ display:none;
       </ul>
 	</div>
   </nav>
-    <div class="parallax"><img src="bg2.jpg"></div>
+    <div class="parallax"><img id="img" src="bg2.jpg"></div>
   <div id="maintext">
     <h3 class="center" id="h3">About me</h3>
   <p id="typewriter" class="center" > Hey friends MY name is Abhishek Saxena<br> I am web developer Learning web & wants a Better Web world for all of us.</br> I am learning &nbsp;web for 1 years
