--- a/index.html
+++ b/index.html
@@ -104,11 +104,15 @@ font-size:25px;
 -webkit-filter:blur(5px);
 }
 #typewriter{
-margin-left:300px;
-margin-right:300px;
+position:absolute;
+left:40px;
+right:40px;
+
 }
 #learn{
 display:none;
+position:absolute;
+margin-top:205px;
 }
 </style>
 </head>
@@ -118,7 +122,7 @@ display:none;
     <div class="nav-wrapper">
 
       <a href="#" class="brand-logo-left">ABportfolio.com</a>
-      <ul class="right">
+      <ul class="right hide-on-med-and-down">
         <li><a id="myedu" href="#">My Education</a></li>
         <li><a id="myprojects" href="#">Projects</a></li>
         <li><a id="contact" href="#">Contact Me</a></li>
@@ -144,10 +148,10 @@ display:none;
   </div>
   </div>
    <div id="section-white">
-      <br><h4 class="center">My Education</h2>
+      <br><h4 class="center">My Education</h4>
       <p class="edutext" class="center" class="z-depth-5"><br>
-I’m an Undergraduate student, pursuing bachelor of technology degree in Computer Science and Engineering from S.R.M.C.E.M .
-I expect to graduate with a Bachelors degree in May 2017. I love to play with web technologies and create great user experiences.</p>
+&nbsp; I’m an Undergraduate student, pursuing bachelor of technology degree in Computer &nbsp;Science and Engineering from S.R.M.C.E.M .
+I expect to graduate with a Bachelors degree &nbsp;in May  2017. I love to play with web technologies and create great user experiences.</p>
     </div>
   <div class="parallax-container">
     <div class="parallax">
@@ -213,7 +217,7 @@ $(window).bind("scroll", function() {
     }
 	});
 	$("#typewriter").typewriter({
-       'speed':40 // default: 300
+       'speed':50 // default: 300
 
 });
 $("#learn").show(12000);
