--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ I expect to graduate with a Bachelors degree &nbsp;in May  2017. I love to play 
 		}
 		else if(destination1>1080)
 		{
-		$('body').animate({scrollTop: $('#img1').offset().top +50}, 'fast');
+		$('body').animate({scrollTop: $('#img1').offset().top +50}, 'slow');
 		
 		}
 	else{
@@ -227,7 +227,7 @@ I expect to graduate with a Bachelors degree &nbsp;in May  2017. I love to play 
 $('body').animate({scrollTop: $('.edutext').offset().top +645}, 'slow');
 		}
 		else if(destination1>750){
-		$('body').animate({scrollTop: $('.edutext').offset().top -150}, 'fast');
+		$('body').animate({scrollTop: $('.edutext').offset().top -150}, 'slow');
 		
 		
 		}
